Provando que aparezcan las recetas

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           </div>
 
         </div>
+        <section>
         <a href="#" class="btn-primary">See what's cooking</a>
 
         <h2 class="list-title">Our Favorite Recipes</h2>
@@ -79,7 +80,7 @@
 
         <a href="#" class="btn-primary">Explore all our recipes</a>
       </div>
-
+      </section>
     </div>
 
     <!--JS FILES-->
