--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
           </div>
 
         </div>
-        <section>
         <a href="#" class="btn-primary">See what's cooking</a>
 
         <h2 class="list-title">Our Favorite Recipes</h2>
@@ -78,15 +77,15 @@
 
         </div>
 
-        <a href="#" class="btn-primary">Explore all our recipes</a>
+        <a href="#" class="btn-primary mostrar">Explore all our recipes</a>
       </div>
-      </section>
     </div>
 
     <!--JS FILES-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script type="text/javascript" src="data/recipes.js"></script>
+    <script type="text/javascript" src="data/activities.js"></script>
     <script type="text/javascript" src="js/script-index.js"></script> 
 
   </body>
